work in progress

--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="grid" class="square-container container">
-    
-    </div>
+    <div id="grid" class="square-container container"> </div>
+    <div id="conteggi"></div>
     <script src="myscript.js"></script>
 </body>
 </html>
