--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 </head>
 <body>
     <div id="grid" class="square-container container"> </div>
-    <div id="conteggi"></div>
+    <div id="conteggi">
+        <p>Il tuo punteggio è di: </p>
+        <div id="risultato"></div>
+    </div>
     <script src="myscript.js"></script>
 </body>
 </html>
